updated with w3css

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
   border-width: 5px;
   font-size: 20pt;
   font-family: monospace;
-  background-color: white;
+  background-color: yellow;
   position: fixed
 }
 
@@ -28,4 +28,4 @@
   margin: 30px;
   text-align: left;
   font-size: 16pt;
-  font-family: "Calibri", sans-serif;
+  font-family: "AR JULIAN", sans-serif;
